--- a/main.html
+++ b/main.html
@@ -8,6 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<div>
+		My current favorite song is <a>https://www.youtube.com/watch?v=H2f7MZaw3Yo</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
