--- a/main.html
+++ b/main.html
@@ -9,7 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<div>
-		My current favorite song is <a>https://www.youtube.com/watch?v=H2f7MZaw3Yo</a>
+	<a href="https://www.youtube.com/watch?v=H2f7MZaw3Yo">	My current favorite song is </a>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
